# Robotics-Perception

devel/: .catkin  .rosinstall  setup.sh
devel/include/pcd_object_detection/: SegmentedClusters.h
devel/include/sensor_stick/: PclConfig.h
devel/lib/pcd_object_detection/: euclidean_clustering  pcd_object_detection  ransac_helper  segment_helper
devel/lib/pkgconfig/: pcd_object_detection.pc  sensor_stick.pc
devel/lib/python2.7/dist-packages/pcd_object_detection/msg/: _SegmentedClusters.py  __init__.py
devel/lib/python2.7/dist-packages/sensor_stick/cfg/: PclConfig.py
devel/lib/sensor_stick/: cloud_transformer
devel/share/common-lisp/ros/pcd_object_detection/msg/: SegmentedClusters.lisp  _package.lisp  _package_SegmentedClusters.lisp  pcd_object_detection-msg.asd
devel/share/gennodejs/ros/pcd_object_detection/msg/: SegmentedClusters.js  _index.js
devel/share/pcd_object_detection/cmake/: pcd_object_detection-msg-paths.cmake  pcd_object_detectionConfig.cmake
devel/share/roseus/ros/pcd_object_detection/: manifest.l
devel/share/sensor_stick/cmake/: sensor_stickConfig.cmake
src/PCD Segmentation/: CMakeLists.txt  RANSAC.cpp  cluster_cloud_0.pcd  cluster_cloud_1.pcd  cluster_cloud_2.pcd  cluster_cloud_3.pcd  cluster_cloud_4.pcd  cluster_cloud_6.pcd  objects_segmented.pcd  ransac_exec  table_segmented.pcd
src/pcd_object_detection/: CMakeLists.txt
src/pcd_object_detection/launch/: segment_pcd.launch
src/pcd_object_detection/src/: euclidean_clustering.cpp  pcd_handler.h  ransac_helper.cpp
src/sensor_stick/: CMakeLists.txt
src/sensor_stick/config/: controllers.yaml  perception.rviz
src/sensor_stick/launch/: robot_description.launch
src/sensor_stick/src/: cloud_transformer.cpp
src/sensor_stick/urdf/: sensor_stick.gazebo.xacro
src/sensor_stick/worlds/: pr2_perception.world
(+1 files in other folders)
